# bevy-rts

./: CONTRIBUTING.md  Cargo.toml  README.md
apps/client/: Cargo.toml
apps/client/src/game/: camera.rs
apps/client/src/game/modes/: destruction.rs
apps/client/src/game/physics/: raycast.rs
assets/: tiles.ron
assets/objects/: house.ron
assets/objects/house/: scene.gltf
crates/objects/: Cargo.toml
crates/objects/src/: assets.rs  gltf.rs  highlight.rs  lib.rs  system.rs  types.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: lib.rs  render.rs  types.rs  world.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  toolbar.rs
docs/: HISTORY.md  plan.md
docs/reviews/: 08-01-2026-a.md  08-01-2026-b.md  08-01-2026-c.md
libs/objects/src/: assets.rs  lib.rs  spatial.rs  system.rs  types.rs
libs/terrain/src/: assets.rs  lib.rs  render.rs  types.rs  world.rs
libs/ui/src/: toolbar.rs
src/: camera.rs  main.rs  object_renderer.rs  object_system.rs  selection.rs  shader.rs  terrain.rs  terrain_generator.rs  terrain_renderer.rs  tile_types.rs  toolbar.rs  world.rs  world_renderer.rs
src/game/: camera.rs  input.rs  lighting.rs  mod.rs
src/game/modes/: construction.rs  destruction.rs
src/game/physics/: collision.rs
src/game/ui/: toolbar.rs
src/game/utils/: gltf.rs  highlight.rs  mod.rs
src/game/world/: mod.rs
src/game/world/objects/: mod.rs  render.rs  storage.rs  system.rs  types.rs
src/game/world/terrain/: mod.rs  render.rs  types.rs  world.rs
