[package]
name = "bevy-rts"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { git = "https://github.com/Lokathor/bytemuck" }
glam = { git = "https://github.com/bitshifter/glam-rs" }
nalgebra = { git = "https://github.com/dimforge/nalgebra" }
tokio = { version = "1.48.0", features = ["rt"] }
parrot-rng = "0.7.1"
bevy = { version = "0.17.3", features = ["jpeg"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
serde_json = "1.0.140"
