[package]
name = "bevy-rts"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
glam = "0.30.9"
nalgebra = "0.34.1"
tokio = { version = "1.48.0", features = ["rt"] }
parrot-rng = "0.7.1"
bevy = { version = "0.17.3", features = ["jpeg"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
serde_json = "1.0.140"
bevy_egui = "0.38.1"
