[package]
name = "bevy-rts-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
glam = "0.30.9"
parrot-rng = "0.7.1"
bevy = { version = "0.17.3", features = ["jpeg"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
bevy_egui = "0.38.1"

terrain = { path = "../../libs/terrain" }
objects = { path = "../../libs/objects" }
ui = { path = "../../libs/ui" }
